src/test/resources/valid_programs/arithmetic__remainder.notc
void main() {
    // 59 = 7 * 8 + 3
    int rem;
    rem = 59 % 7;
    printInt(rem);
    rem = 59 % 8;
    printInt(rem);

    printInt(81 % 9);
    printInt(89 % 9);
    printInt(90 % 9);

    // (a/b)*b + a%b == a  (C99)
    printInt( 5 % -3); //  2
    printInt(-5 %  3); // -2
    printInt(-5 % -3); // -2
}
