src/test/resources/semantic_errors/str_minus_int.notc
void main() {
    int a = "AAAAAAAAAAAA" - 7;
}
